# chatbot-debate-api

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: llm.py  main.py  models.py  service.py  settings.py  store.py
app/api/: routes_chat.py  routes_health.py
app/core/: settings.py
app/handlers/: chat_handler.py
app/models/: chat.py
app/security/: injection.py
app/services/: debate.py  llm.py
app/storage/: __init__.py  base.py  memory.py  redis_store.py
tests/: conftest.py  test_api.py  test_debate.py  test_llm.py  test_main.py  test_models.py  test_redis_store.py  test_security.py  test_service.py  test_store.py
